--- a/pug/modules/_nav.pug
+++ b/pug/modules/_nav.pug
@@ -7,7 +7,7 @@ nav.main-nav
         a(href='position.html').nav-link <span class='nav-link-num'>4</span> Позиціонування
         a(href='fonts.html').nav-link <span class='nav-link-num'>5</span> Стилізація тексту
         a(href='block_style.html').nav-link <span class='nav-link-num'>6</span> Стилізація елементів
-        a(href='').nav-link <span class='nav-link-num'>7</span> @media
+        a(href='media.html').nav-link <span class='nav-link-num'>7</span> @media
         a(href='fonts.html').nav-link <span class='nav-link-num'>8</span> Анімація (2D, 3D)
 
         a(href='').nav-link <span class='nav-link-num'>10</span> Display
