--- a/scss/modules/_selectors.scss
+++ b/scss/modules/_selectors.scss
@@ -647,6 +647,17 @@ table.measure-table {
 
 }
 
+.y-text {
+  color: #ec6f00;
+}
+
+.b-text {
+  color: blue;
+}
+
+.r-text {
+  color: #ff1b1b;
+}
 // ------------------------------------------------------------------------------
 //block styling -----------------------------------------------------------------
 
