--- a/css/main.css
+++ b/css/main.css
@@ -845,6 +845,15 @@ table.measure-table tr:last-child td {
     margin: 0;
     padding: 0; }
 
+.y-text {
+  color: #ec6f00; }
+
+.b-text {
+  color: blue; }
+
+.r-text {
+  color: #ff1b1b; }
+
 .block-style {
   max-width: 1100px;
   margin: 0 auto 100px; }
