--- a/scss/general/_table.scss
+++ b/scss/general/_table.scss
@@ -57,7 +57,7 @@ td:first-child {
   display: table;
   //width: 100%;
   //max-width: 1000px;
-  margin: 0 auto;
+  margin: 3rem auto;
 
   // block formatting
   &-caption {
