--- a/pug/modules/_nav.pug
+++ b/pug/modules/_nav.pug
@@ -8,7 +8,8 @@ nav.main-nav
         a(href='fonts.html').nav-link <span class='nav-link-num'>5</span> Стилізація тексту
         a(href='block_style.html').nav-link <span class='nav-link-num'>6</span> Стилізація елементів
         a(href='media.html').nav-link <span class='nav-link-num'>7</span> @media
-        a(href='fonts.html').nav-link <span class='nav-link-num'>8</span> Анімація (2D, 3D)
+        a(href='animations.html').nav-link <span class='nav-link-num'>8</span> Анімація (2D, 3D)
+        a(href='flexbox.html').nav-link <span class='nav-link-num'>9</span> Flex-box
 
         a(href='').nav-link <span class='nav-link-num'>10</span> Display
         a(href='').nav-link <span class='nav-link-num'>11</span> Префікси
