--- a/css/main.css
+++ b/css/main.css
@@ -630,35 +630,6 @@ table.measure-table tr:last-child td {
   max-width: 1000px;
   margin: auto;
   margin-bottom: 100px; }
-  .position .code {
-    display: block;
-    text-shadow: 1px 1px 0 black;
-    background-color: #333333;
-    background-image: linear-gradient(to bottom, #333333, #000000);
-    color: white;
-    padding: 1em;
-    border-color: rgba(255, 255, 255, 0.3);
-    border-width: 3px;
-    border-style: solid;
-    border-radius: 10px;
-    white-space: pre;
-    margin-bottom: 40px; }
-    .position .code::before {
-      content: "css";
-      float: right;
-      color: black;
-      text-shadow: -1px 1px 0 #666;
-      font-size: 1.5em; }
-    .position .code .nc {
-      color: #FFD357; }
-    .position .code .p {
-      color: #ffffff; }
-    .position .code .nl {
-      color: #ffffff; }
-    .position .code .nb {
-      color: #ABEBD9; }
-    .position .code .com {
-      color: silver; }
   .position .visual {
     border: solid #6AC5AC 3px;
     position: relative;
@@ -823,7 +794,7 @@ table.measure-table tr:last-child td {
   .fonts .title {
     text-align: center; }
   .fonts table {
-    margin: auto;
+    margin: 3rem auto;
     border: 1px solid rgba(220, 220, 220, 0.6);
     border-collapse: collapse; }
   .fonts table td {
@@ -844,15 +815,6 @@ table.measure-table tr:last-child td {
     list-style: none;
     margin: 0;
     padding: 0; }
-
-.y-text {
-  color: #ec6f00; }
-
-.b-text {
-  color: blue; }
-
-.r-text {
-  color: #ff1b1b; }
 
 .block-style {
   max-width: 1100px;
@@ -935,6 +897,11 @@ table.measure-table tr:last-child td {
   font-weight: 600;
   margin: 10px; }
 
+.flex-image {
+  display: block;
+  width: 100%;
+  height: auto; }
+
 .media {
   max-width: 1000px;
   margin: auto;
@@ -972,6 +939,409 @@ table.measure-table tr:last-child td {
   .code .orange {
     color: #de7300; }
   .code .green {
-    color: #4caf50; }
+    color: #6CAA4F; }
   .code .brown {
     color: #89472d; }
+  .code .blue {
+    color: #006699; }
+
+.flexible {
+  max-width: 1000px;
+  margin: auto;
+  margin-bottom: 100px; }
+
+.flex-container {
+  width: 80%;
+  display: flex;
+  margin: 2rem auto;
+  padding: 1rem;
+  border-radius: 7px;
+  background-color: rgba(200, 200, 200, 0.3); }
+  .flex-container.unsized {
+    width: auto; }
+  .flex-container.start {
+    justify-content: flex-start; }
+  .flex-container.end {
+    justify-content: flex-end; }
+  .flex-container.center {
+    justify-content: center; }
+  .flex-container.space-b {
+    justify-content: space-between; }
+  .flex-container.space-a {
+    justify-content: space-around; }
+  .flex-container.a-stretch {
+    height: 130px;
+    align-items: stretch; }
+  .flex-container.align-start {
+    height: 130px;
+    align-items: flex-start; }
+  .flex-container.align-center {
+    height: 130px;
+    align-items: center; }
+  .flex-container.align-end {
+    height: 130px;
+    align-items: flex-end; }
+  .flex-container.baseline {
+    height: 130px;
+    align-items: baseline; }
+  .flex-container.row-reverse {
+    flex-direction: row-reverse; }
+  .flex-container.column {
+    flex-direction: column; }
+  .flex-container.column-reverse {
+    flex-direction: column-reverse; }
+  .flex-container.no-wrap {
+    width: 50%; }
+  .flex-container.wrap {
+    flex-wrap: wrap; }
+  .flex-container.wrap-reverse {
+    flex-wrap: wrap-reverse; }
+  .flex-container.content-al_stretch {
+    flex-flow: row wrap;
+    height: 350px;
+    align-content: stretch; }
+  .flex-container.content-al_around {
+    flex-flow: row wrap;
+    height: 350px;
+    align-content: space-around; }
+  .flex-container.content-al_between {
+    flex-flow: row wrap;
+    height: 350px;
+    align-content: space-between; }
+  .flex-container.content-al_center {
+    flex-flow: row wrap;
+    height: 350px;
+    align-content: center; }
+  .flex-container.content-al_flex-end {
+    flex-flow: row wrap;
+    height: 350px;
+    align-content: flex-end; }
+  .flex-container.content-al_flex-start {
+    flex-flow: row wrap;
+    height: 350px;
+    align-content: flex-start; }
+
+.flex-element {
+  font-size: .8rem;
+  margin: 0 1rem;
+  color: #fff;
+  font-weight: 700;
+  padding: .5rem;
+  line-height: 1rem;
+  border-radius: 7px; }
+  .flex-element:nth-child(2n) {
+    background-color: #00a19b; }
+  .flex-element:nth-child(2n-1) {
+    background-color: #f44336; }
+  .flex-element.thin {
+    flex-basis: 150px; }
+  .flex-element.wide {
+    flex-basis: 400px; }
+  .flex-element.grow-1 {
+    flex-grow: 1; }
+  .flex-element.grow-3 {
+    flex-grow: 3; }
+  .flex-element.grow-5 {
+    flex-grow: 5; }
+  .flex-element.shrink-1 {
+    flex-shrink: 1; }
+  .flex-element.shrink-3 {
+    flex-shrink: 3; }
+  .flex-element.shrink-10 {
+    flex-shrink: 10; }
+
+.animations {
+  max-width: 1000px;
+  margin: auto;
+  margin-bottom: 100px; }
+
+.anim-subtitle {
+  perspective: 300px;
+  width: 300px;
+  margin: 2rem auto;
+  font-size: 28px;
+  text-align: center;
+  font-weight: 700; }
+  .anim-subtitle span {
+    display: block;
+    animation: d-title 4s ease-in-out infinite;
+    overflow: hidden; }
+
+@keyframes d-title {
+  0% {
+    transform: rotateY(0); }
+  100% {
+    transform: rotateY(360deg); } }
+
+.perspective-container-1, .perspective-container-2 {
+  perspective: 900px;
+  width: 80%;
+  margin: auto;
+  padding: 1rem 2rem;
+  display: flex;
+  justify-content: space-around;
+  border: 2px solid rgba(100, 100, 100, 0.5); }
+  .perspective-container-1 .perspective-example, .perspective-container-2 .perspective-example {
+    width: 220px;
+    height: 120px;
+    background-color: #006699;
+    transform: rotateX(-120deg); }
+
+.perspective-container-2 {
+  perspective-origin: 10% 10%; }
+  .perspective-container-2 .perspective-example {
+    width: 220px;
+    height: 120px;
+    background-color: #00E4F6;
+    transform: rotateX(50deg); }
+
+.animation-sample {
+  display: flex;
+  justify-content: center;
+  width: 50%;
+  margin: auto;
+  padding: 5rem; }
+
+@keyframes loader {
+  0% {
+    transform: rotate(-45deg); }
+  50% {
+    transform: rotate(-135deg); }
+  100% {
+    transform: rotate(-225deg); } }
+
+@keyframes span-1 {
+  0% {
+    transform: translate(0); }
+  50% {
+    transform: translate(-50px, 0);
+    border-color: #EE4D68; }
+  100% {
+    transform: translate(0); } }
+
+@keyframes span-2 {
+  0% {
+    transform: translate(0); }
+  50% {
+    transform: translate(50px, 0);
+    border-color: #875678; }
+  100% {
+    transform: translate(0); } }
+
+@keyframes span-3 {
+  0% {
+    transform: translate(0); }
+  50% {
+    transform: translate(0, -50px);
+    border-color: #FF9900; }
+  100% {
+    transform: translate(0); } }
+
+@keyframes span-4 {
+  0% {
+    transform: translate(0); }
+  50% {
+    transform: translate(0, 50px);
+    border-color: #00E4F6; }
+  100% {
+    transform: translate(0); } }
+
+.sample {
+  width: 50px;
+  height: 50px;
+  position: relative;
+  animation: loader 2s infinite ease-in-out; }
+  .sample span {
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    left: 0;
+    top: 0;
+    border: 4px solid #0B1B48; }
+
+.sample span:nth-child(1) {
+  animation: span-1 2s ease-in-out infinite; }
+
+.sample span:nth-child(2) {
+  animation: span-2 2s ease-in-out infinite; }
+
+.sample span:nth-child(3) {
+  animation: span-3 2s ease-in-out infinite; }
+
+.sample span:nth-child(4) {
+  animation: span-4 2s ease-in-out infinite; }
+
+.cubic-animation-wrapper .anim-container {
+  display: inline-block;
+  position: relative;
+  margin: 20px 16px 20px 20px;
+  width: 150px;
+  height: 150px;
+  box-shadow: 0 0 0 5px rgba(0, 0, 0, 0.1);
+  transition: .3s; }
+  .cubic-animation-wrapper .anim-container:after {
+    content: attr(class);
+    position: absolute;
+    top: 6px;
+    font-size: 12px;
+    left: 2px;
+    padding: 0 6px; }
+
+.cubic-animation-wrapper i {
+  position: absolute;
+  width: 5px;
+  height: 5px;
+  left: 0;
+  bottom: 0;
+  border-radius: 50%;
+  background: #0B1B48;
+  animation: move 3s infinite; }
+
+@keyframes move {
+  0% {
+    left: 0;
+    bottom: 0; }
+  100% {
+    left: 145px;
+    bottom: 145px; } }
+
+.cubic-animation-wrapper .linear i {
+  animation-timing-function: linear; }
+
+.cubic-animation-wrapper .ease i {
+  animation-timing-function: ease; }
+
+.cubic-animation-wrapper .ease-in i {
+  animation-timing-function: ease-in; }
+
+.cubic-animation-wrapper .ease-in-out i {
+  animation-timing-function: ease-in-out; }
+
+.cubic-animation-wrapper .ease-out i {
+  animation-timing-function: ease-out; }
+
+.cubic-animation-wrapper .cubic-bezier-1 i {
+  animation-timing-function: cubic-bezier(0.8, 1.5, 0.2, -1); }
+
+.cubic-animation-wrapper .cubic-bezier-2 i {
+  animation-timing-function: cubic-bezier(0.47, -0.44, 0.49, 1.46); }
+
+.cubic-animation-wrapper .cubic-bezier-3 i {
+  animation-timing-function: cubic-bezier(1, 0, 0, 0.5); }
+
+.cubic-animation-wrapper .cubic-bezier-4 i {
+  animation-timing-function: cubic-bezier(0.1, 0.7, 1, 0.1); }
+
+.cubic-animation-wrapper .cubic-bezier-1:after {
+  content: "cubic-bezier (.8,1.5,.2,-1)"; }
+
+.cubic-animation-wrapper .cubic-bezier-2:after {
+  content: "cubic-bezier (.47,-.44,.49,1.46)"; }
+
+.cubic-animation-wrapper .cubic-bezier-3:after {
+  content: "cubic-bezier (1,0,0,.5)"; }
+
+.cubic-animation-wrapper .cubic-bezier-4:after {
+  content: "cubic-bezier (.1,.7,1,1)"; }
+
+.cubic-animation-wrapper .steps i {
+  animation-timing-function: steps(10, end); }
+
+.cubic-animation-wrapper .steps:after {
+  content: "steps(10,end)"; }
+
+.cubic-animation-wrapper i:nth-child(2) {
+  animation-delay: .1s; }
+
+.cubic-animation-wrapper i:nth-child(3) {
+  animation-delay: .2s; }
+
+.cubic-animation-wrapper i:nth-child(4) {
+  animation-delay: .3s; }
+
+.cubic-animation-wrapper i:nth-child(5) {
+  animation-delay: .4s; }
+
+.cubic-animation-wrapper i:nth-child(6) {
+  animation-delay: .5s; }
+
+.cubic-animation-wrapper i:nth-child(7) {
+  animation-delay: .6s; }
+
+.cubic-animation-wrapper i:nth-child(8) {
+  animation-delay: .7s; }
+
+.cubic-animation-wrapper i:nth-child(9) {
+  animation-delay: .8s; }
+
+.cubic-animation-wrapper i:nth-child(10) {
+  animation-delay: .9s; }
+
+.anim-delay-wrapper {
+  position: relative;
+  width: 200px;
+  height: 200px;
+  margin: 2rem auto;
+  padding: 3rem 0; }
+
+@keyframes run {
+  0% {
+    transform: translate(0%);
+    border-radius: 50%; }
+  25% {
+    transform: translate(150%) scale(0.5);
+    border-radius: 0; }
+  50% {
+    transform: translate(150%, 150%);
+    border-radius: 50%; }
+  75% {
+    transform: translate(0%, 150%) scale(0.5);
+    border-radius: 0; } }
+  .anim-delay-wrapper span {
+    display: block;
+    position: absolute;
+    width: 40%;
+    height: 40%;
+    border-radius: 50%;
+    box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.4);
+    animation: run 3s infinite ease-in-out; }
+    .anim-delay-wrapper span.one {
+      background: #F3B222;
+      animation-delay: 4s; }
+    .anim-delay-wrapper span.two {
+      background: #F0653E;
+      animation-delay: 2.5s; }
+    .anim-delay-wrapper span.three {
+      background: #B9C0C0;
+      animation-delay: 1.5s; }
+    .anim-delay-wrapper span.four {
+      background: #8F7473; }
+
+.catch-animation-wrap {
+  width: 100%;
+  line-height: 50px;
+  padding: 3rem 0;
+  cursor: pointer;
+  user-select: none; }
+  .catch-animation-wrap:active .catch-ellips {
+    animation-play-state: paused;
+    opacity: 1; }
+
+@keyframes catch-anim {
+  0% {
+    transform: translateX(0); }
+  10% {
+    box-shadow: 1px 1px 15px rgba(50, 100, 255, 0.9); }
+  50% {
+    height: 15px; }
+  100% {
+    transform: translateX(1000px);
+    height: 1px; } }
+  .catch-animation-wrap .catch-ellips {
+    opacity: .5;
+    display: inline-block;
+    width: 30px;
+    height: 10px;
+    border-radius: 50%;
+    background-color: #0B1B48;
+    animation: catch-anim .4s ease-in-out alternate infinite; }
