--- a/scss/modules/_selectors.scss
+++ b/scss/modules/_selectors.scss
@@ -326,49 +326,6 @@ table.measure-table {
   margin: auto;
   margin-bottom: 100px;
 
-  .code {
-    display: block;
-    text-shadow: 1px 1px 0 black;
-    background-color: #333333;
-    background-image: linear-gradient(to bottom, #333333, #000000);
-    color: white;
-    padding: 1em;
-    border-color: rgba(255, 255, 255, 0.3);
-    border-width: 3px;
-    border-style: solid;
-    border-radius: 10px;
-    white-space: pre;
-    margin-bottom: 40px;
-
-    &::before {
-      content: "css";
-      float: right;
-      color: black;
-      text-shadow: -1px 1px 0 #666;
-      font-size: 1.5em;
-    }
-
-    .nc {
-      color: #FFD357;
-    }
-
-    .p {
-      color: #ffffff;
-    }
-
-    .nl {
-      color: #ffffff;
-    }
-
-    .nb {
-      color: #ABEBD9;
-    }
-
-    .com {
-      color: silver;
-    }
-  }
-
   .visual {
     border: solid #6AC5AC 3px;
     position: relative;
@@ -610,7 +567,7 @@ table.measure-table {
 
   table {
     //width: 90%;
-    margin: auto;
+    margin: 3rem auto;
     border: 1px solid rgba(220, 220, 220, .6);
     border-collapse: collapse;
   }
@@ -647,17 +604,6 @@ table.measure-table {
 
 }
 
-.y-text {
-  color: #ec6f00;
-}
-
-.b-text {
-  color: blue;
-}
-
-.r-text {
-  color: #ff1b1b;
-}
 // ------------------------------------------------------------------------------
 //block styling -----------------------------------------------------------------
 
@@ -765,15 +711,23 @@ table.measure-table {
 
 }
 
+.flex-image {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
 //------------------------------------------------------------------------------
-//ruls -------------------------------------------------------------------------
+//@media -------------------------------------------------------------------------
 
 .media {
   max-width: 1000px;
   margin: auto;
   margin-bottom: 100px;
 
-}
+  }
+
+
 // global classes
 
 .code {
@@ -823,10 +777,272 @@ table.measure-table {
   }
 
   .green {
-    color: #4caf50;
+    color: #6CAA4F;
   }
 
   .brown {
     color: #89472d;
+  }
+
+  .blue {
+    color: #006699;
+  }
+}
+
+//------------------------------------------------------------------------------
+//flexbox module -------------------------------------------------------------------------
+
+.flexible {
+  max-width: 1000px;
+  margin: auto;
+  margin-bottom: 100px;
+}
+
+.flex-container {
+  width: 80%;
+  display: flex;
+  margin: 2rem auto;
+  padding: 1rem;
+  border-radius: 7px;
+  background-color: rgba(200, 200, 200, .3);
+
+  &.unsized {
+    width: auto;
+  }
+
+
+
+// justify-content ---------------------------------------------------------------------------
+// -------------------------------------------------------------------------------------------
+  &.start {
+    justify-content: flex-start;
+  }
+
+
+  &.end {
+    justify-content: flex-end;
+  }
+
+  &.center {
+    justify-content: center;
+  }
+
+  &.space-b {
+    justify-content: space-between;
+  }
+
+  &.space-a {
+    justify-content: space-around;
+  }
+
+// align-items ---------------------------------------------------------------------------
+// -------------------------------------------------------------------------------------------
+
+  &.a-stretch {
+    height: 130px;
+    align-items: stretch;
+  }
+
+  &.align-start {
+    height: 130px;
+    align-items: flex-start;
+  }
+
+  &.align-center {
+    height: 130px;
+    align-items: center;
+  }
+
+  &.align-end {
+    height: 130px;
+    align-items: flex-end;
+  }
+
+  &.baseline {
+    height: 130px;
+    align-items: baseline;
+  }
+
+// flex-direction ---------------------------------------------------------------------------
+// -------------------------------------------------------------------------------------------
+
+  &.row-reverse {
+    flex-direction: row-reverse;
+  }
+
+  &.column {
+    flex-direction: column;
+  }
+
+  &.column-reverse {
+    flex-direction: column-reverse;
+  }
+
+// flex-wrap ---------------------------------------------------------------------------
+// -------------------------------------------------------------------------------------------
+  &.no-wrap {
+    width: 50%;
+  }
+
+  &.wrap {
+    flex-wrap: wrap;
+  }
+
+  &.wrap-reverse {
+    flex-wrap: wrap-reverse;
+  }
+
+// align-content ---------------------------------------------------------------------------
+// -------------------------------------------------------------------------------------------
+  &.content-al_stretch {
+    flex-flow: row wrap;
+    height: 350px;
+    align-content: stretch;
+  }
+
+  &.content-al_around {
+    flex-flow: row wrap;
+    height: 350px;
+    align-content: space-around;
+  }
+
+  &.content-al_between {
+    flex-flow: row wrap;
+    height: 350px;
+    align-content: space-between;
+  }
+
+  &.content-al_center {
+    flex-flow: row wrap;
+    height: 350px;
+    align-content: center;
+  }
+
+  &.content-al_flex-end {
+    flex-flow: row wrap;
+    height: 350px;
+    align-content: flex-end;
+  }
+
+  &.content-al_flex-start {
+    flex-flow: row wrap;
+    height: 350px;
+    align-content: flex-start;
+  }
+
+}
+
+.flex-element {
+  font-size: .8rem;
+  margin: 0 1rem;
+  color: $white;
+  font-weight: 700;
+  padding: .5rem;
+  line-height: 1rem;
+  border-radius: 7px;
+
+  &:nth-child(2n) {
+    background-color: #00a19b;
+  }
+
+  &:nth-child(2n-1) {
+    background-color: #f44336;
+  }
+
+// grow/shrink ----------------------------------------------------------
+// ----------------------------------------------------------------
+
+  &.thin {
+    flex-basis: 150px;
+  }
+
+  &.wide {
+    flex-basis: 400px;
+  }
+
+  &.grow-1 {
+    flex-grow: 1;
+  }
+
+  &.grow-3 {
+    flex-grow: 3;
+  }
+
+  &.grow-5 {
+    flex-grow: 5;
+  }
+
+  &.shrink-1 {
+    flex-shrink: 1;
+  }
+
+  &.shrink-3 {
+    flex-shrink: 3;
+  }
+
+  &.shrink-10 {
+    flex-shrink: 10;
+  }
+
+}
+
+// animations section ---------------------------------------------
+// ----------------------------------------------------------------
+
+.animations {
+  max-width: 1000px;
+  margin: auto;
+  margin-bottom: 100px;
+
+}
+
+.anim-subtitle {
+  perspective: 300px;
+  width: 300px;
+  margin: 2rem auto;
+  font-size: 28px;
+  text-align: center;
+  font-weight: 700;
+
+  span {
+    display: block;
+    animation: d-title 4s ease-in-out infinite;
+    overflow: hidden;
+  }
+
+  @keyframes d-title {
+    0% {transform: rotateY(0);}
+    100% {transform: rotateY(360deg);}
+  }
+
+}
+
+.perspective-container-1 {
+  perspective: 900px;
+  width: 80%;
+  margin: auto;
+  padding: 1rem 2rem;
+  display: flex;
+  justify-content: space-around;
+  border: 2px solid rgba(100, 100, 100, .5);
+
+  .perspective-example {
+    width: 220px;
+    height: 120px;
+    background-color: #006699;
+    transform: rotateX(-120deg);
+  }
+
+}
+
+.perspective-container-2 {
+  @extend .perspective-container-1;
+  perspective-origin: 10% 10%;
+
+  .perspective-example {
+    width: 220px;
+    height: 120px;
+    background-color: #00E4F6;
+    transform: rotateX(50deg);
   }
 }
