--- a/pug/index.pug
+++ b/pug/index.pug
@@ -6,6 +6,9 @@ head
     title HTML / CSS
 
     link(rel='stylesheet' href='./css/main.css')
+    script(src='js/libs/jquery/jquery.min.js')
+    script(src='js/libs/jquery/jquery.mousewheel.js')
+    script(src='js/scripts/slickcustomscroll.js')
 
 block main
     include pages/_index
