--- a/pug/modules/_nav.pug
+++ b/pug/modules/_nav.pug
@@ -1,19 +1,31 @@
-nav.main-nav
-    a(href='index.html').to-home < Home
-    div.nav-block
-        a(href='selectors.html').nav-link <span class='nav-link-num'>1</span> Селектори, Псевдокласи, Каскадність, Псевдоелементи
-        a(href='css_boxmodel.html').nav-link <span class='nav-link-num'>2</span> СSS Box model
-        a(href='measurement.html').nav-link <span class='nav-link-num'>3</span> Одиниці виміру
-        a(href='position.html').nav-link <span class='nav-link-num'>4</span> Позиціонування
-        a(href='fonts.html').nav-link <span class='nav-link-num'>5</span> Стилізація тексту
-        a(href='block_style.html').nav-link <span class='nav-link-num'>6</span> Стилізація елементів
-        a(href='media.html').nav-link <span class='nav-link-num'>7</span> @media
-        a(href='transform.html').nav-link <span class='nav-link-num'>9</span> Трансформація
-        a(href='animations.html').nav-link <span class='nav-link-num'>8</span> Анімація (2D, 3D)
-        a(href='flexbox.html').nav-link <span class='nav-link-num'>9</span> Flex-box
-
-        a(href='').nav-link <span class='nav-link-num'>10</span> Display
-        a(href='').nav-link <span class='nav-link-num'>11</span> Префікси
-        a(href='').nav-link <span class='nav-link-num'>12</span> SVG
-        a(href='').nav-link <span class='nav-link-num'>13</span> Спрайти
-    div.decorate
+nav.nav-menu
+    a(href='index.html').home-link home
+    ol.nav-list
+        li
+            a(href='selectors.html').nav-link Селектори, Псевдокласи, Каскадність, Псевдоелементи
+        li
+            a(href='css_boxmodel.html').nav-link СSS Box model
+        li
+            a(href='measurement.html').nav-link Одиниці виміру
+        li
+            a(href='position.html').nav-link Позиціонування
+        li
+            a(href='fonts.html').nav-link Стилізація тексту
+        li
+            a(href='block_style.html').nav-link Стилізація елементів
+        li
+            a(href='media.html').nav-link @media
+        li
+            a(href='transform.html').nav-link Трансформація
+        li
+            a(href='animations.html').nav-link Анімація (2D, 3D)
+        li
+            a(href='flexbox.html').nav-link Flex-box
+        li
+            a(href='').nav-link Display
+        li
+            a(href='').nav-link Префікси
+        li
+            a(href='').nav-link SVG
+        li
+            a(href='').nav-link Спрайти
