--- a/pug/pages/_animations.pug
+++ b/pug/pages/_animations.pug
@@ -353,7 +353,7 @@ main.main-content
 
 
 
-            h2.anim-subtitle <span>CSS 3d transformations</span>
+            h2.anim-subtitle <div class="front-card">CSS 3d transformations<div class="back-card">CSS 3d transformations</div></div>
             p 3d трансформації працюють аналогічно з 2d трансформаціями, різниця в тому, що ою'єкти мають змогу пересуватись по осі Z. Щоб почати створювати 3d трансформацію, потрібно встановити властивість <code>perspective</code> для батьківського контейнеру.
                 figure.code <span class="nc">.parent</span>
                     | &emsp;{
@@ -542,8 +542,6 @@ main.main-content
 
             .scene
                 .cube-wrapper
-                    .triangle
-
                     figure.front
                     figure.back
                     figure.top
