--- a/scss/general/_general.scss
+++ b/scss/general/_general.scss
@@ -5,13 +5,13 @@
   width: 100%;
 }
 
-.container {
-  //margin: 0 auto;
-  margin-left: 50px;
-  padding: 0;
-
-  margin-bottom: 100px;
-}
+//.container {
+//  //margin: 0 auto;
+//  margin-left: 50px;
+//  padding: 0;
+//
+//  margin-bottom: 100px;
+//}
 
 .main-title {
   text-align: center;
