--- a/scss/utilities/colors/_project_default.scss
+++ b/scss/utilities/colors/_project_default.scss
@@ -43,4 +43,5 @@ $base-bg     : $white;
 $base-text   : color('default', 'dark-gray');
 $base-link   : color('default', 'blue');
 $base-border : color('default', 'light-gray');
+$base-blue   : color('state', 'blue');
 // -----------------------
