--- a/pug/pages/_index.pug
+++ b/pug/pages/_index.pug
@@ -1,10 +1,83 @@
 main.main-content
-    .container
-        div.item-content
-            h1.main-title
-                a(href='html/html/index.html') HTML(5)
-            h1.main-title
-                a(href='selectors.html') CSS(3)
+    .container.container-full
+        .item-content
+            h1.title.home-title
+                | Welcome to our CSS/HTML tutorial
+            h2.title.main-subtitle Lorem ipsum dolor
+            .home-card_wrapper.row
+                .col.m-6.s-12
+                    .home-card
+                        h2.card-title
+                            a(href="html/index.html")
+                                | HTML
+                        ul.theme-list
+                            li.theme-item
+                                a(href="#")
+                                    |
+                            li.theme-item
+                                a(href="#")
+                                    |
+                            li.theme-item
+                                a(href="#")
+                                    |
+                            li.theme-item
+                                a(href="#")
+                                    |
+                            li.theme-item
+                                a(href="#")
+                                    |
+                            li.theme-item
+                                a(href="#")
+                                    |
+
+                .col.m-6.s-12
+                    .home-card
+                        h2.card-title
+                            a(href="./css_boxmodel.html")
+                                | CSS
+                        ul.theme-list(rel='customScroll')
+                            li.theme-item
+                                a(href="#")
+                                    | CSS Box Model
+                            li.theme-item
+                                a(href="#")
+                                    | Одиниці виміру
+                            li.theme-item
+                                a(href="#")
+                                    | Селектори, Псевдокласи
+                            li.theme-item
+                                a(href="#")
+                                    | Позиціонування
+                            li.theme-item
+                                a(href="#")
+                                    | Стилізація тексту
+                            li.theme-item
+                                a(href="#")
+                                    | Стилізація елементів
+                            li.theme-item
+                                a(href="#")
+                                    | @media
+                            li.theme-item
+                                a(href="#")
+                                    | Трансформація
+                            li.theme-item
+                                a(href="#")
+                                    | Анімація
+                            li.theme-item
+                                a(href="#")
+                                    | flexbox
+                            li.theme-item
+                                a(href="#")
+                                    | Display
+                            li.theme-item
+                                a(href="#")
+                                    | Префікси
+                            li.theme-item
+                                a(href="#")
+                                    | Спрайти
+                            li.theme-item
+                                a(href="#")
+                                    | SVG
 
 
 
