--- a/scss/modules/_navigation.scss
+++ b/scss/modules/_navigation.scss
@@ -1,75 +1,97 @@
-.main-nav {
+.nav-menu {
   position: fixed;
   top: 0;
   left: 0;
-  overflow: hidden;
-  width: 50px;
   bottom: 0;
-  background-color: #ff9600;
+  width: 2.5rem;
+  overflow-y: hidden;
+  background-color: $white;
+  box-shadow: $box-shadow;
+  transition: width 250ms ease-in-out;
+  z-index: 10000;
 
   &:hover {
-    width: 250px;
+    width: 22%;
 
     .nav-block {
       overflow-y: auto;
     }
   }
-  .to-home {
-    //position: fixed;
+}
+
+.home-link {
+  display: block;
+  width: 170px;
+  margin: auto;
+  padding: 1rem;
+  text-align: center;
+  font-size: 20px;
+  text-transform: uppercase;
+
+}
+
+.nav-list {
+  max-height: 90%;
+  padding: 0 0 0 3rem;
+  display: block;
+  overflow-y: hidden;
+  overflow-x: hidden;
+  list-style: none;
+  counter-reset: item-number;
+
+  li {
+    position: relative;
+
+    &:nth-child(-n+9) {
+
+      &::before {
+        left: -36px;
+      }
+
+    }
+
+    &::before {
+      counter-increment: item-number;
+      content: counter(item-number);
+      position: absolute;
+      top: 6px;
+      left: -40px;
+      padding: 3px 5px;
+      border-radius: 3px;
+      background-color: $base-link;
+      font-size: 12px;
+      color: $white;
+    }
+  }
+
+  .nav-link {
+    position: relative;
     display: block;
-    height: 25px;
-    line-height: 25px;
-    text-align: center;
-    //left: 0;
-    //top: 0;
-    width: 100%;
-    //z-index: 100;
-  }
+    height: 100%;
+    line-height: 1.5rem;
+    padding: .4rem;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    font-size: .7rem;
+    font-weight: 600;
+    text-transform: uppercase;
 
-  .decorate {
-    height: 25px;
-    width: 100%;
-  }
-}
+    &:hover {
+      color: $black;
 
-.nav-block {
-  overflow: hidden;
-  height: calc(100% - 50px);
+      &::after {
+        content: "";
+        position: absolute;
+        top: 0;
+        right: 0;
+        display: block;
+        width: 3px;
+        height: 110%;
+        background-color: $base-blue;
+        border-radius: 20%;
 
-  /* хром, сафари */
-  //&::-webkit-scrollbar {
-  //  width: 0;
-  //}
-
-  /* ie 10+ */
-  //-ms-overflow-style: none;
-
-  /* фф (свойство больше не работает, других способов тоже нет)*/
-  //overflow: -moz-scrollbars-none;
-}
-
-.nav-link {
-  display: flex;
-  color: #2c303d;
-  font-size: 18px;
-  line-height: 50px;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  border-bottom: 1px solid black;
-  //padding: 20px 20px 20px 0;
-  padding-right: 20px;
-  height: 50px;
-  background-color: #2c87ce;
-  color: #fff;
-  width: 250px;
-
-  &-num {
-    display: inline-block;
-    width: 50px;
-    height: 50px;
-    text-align: center;
-    flex-shrink: 0;
+      }
+    }
   }
 }
-
 
