--- a/scss/utilities/_color.scss
+++ b/scss/utilities/_color.scss
@@ -1,9 +1,8 @@
 @import './colors/project_default';
 
 // General ---------------
-$body-color: rgba(250, 251, 252, 1);
 $title-color: #4d4d52;
-$box-shadow: 3px 8px 29px -6px rgba($black, 0.5);
+$box-shadow-black: 3px 8px 29px -6px rgba($black, 0.5);
 
 // -----------------------
 
