--- a/scss/main.scss
+++ b/scss/main.scss
@@ -26,6 +26,8 @@
 @import "modules/easy-animation";
 @import "modules/home-card";
 @import "modules/titles";
+@import 'modules/code-example';
+@import 'modules/flexbox-module';
 
 // State
 //@import "state/state";
