--- a/scss/utilities/_color.scss
+++ b/scss/utilities/_color.scss
@@ -3,6 +3,7 @@
 // General ---------------
 $title-color: #4d4d52;
 $box-shadow-black: 3px 8px 29px -6px rgba($black, 0.5);
+$base-text: #696969;
 
 // -----------------------
 
