--- a/pug/pages/_flexbox.pug
+++ b/pug/pages/_flexbox.pug
@@ -1,6 +1,6 @@
 main.main-content
     .container
-        .flexible
+        .flex-layout
             h1.main-title <code>flexbox</code>
             p <code>flexbox</code> це порівняно нова технологія, яка підтримується всіма браузерами з середини 2016 року (IE 11 частково).
             p Flexbox надає інструментарій для швидкого створення складних. гнучких макетів, та функцій, які було важко реалізувати традиційними медотами CSS.
