--- a/scss/modules/_navigation.scss
+++ b/scss/modules/_navigation.scss
@@ -83,9 +83,9 @@
         content: "";
         position: absolute;
         top: 0;
-        right: 0;
+        right: -2px;
         display: block;
-        width: 3px;
+        width: 4px;
         height: 110%;
         background-color: $base-blue;
         border-radius: 20%;
